--- a/.project
+++ b/.project
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ModelGlue (Gesture)</name>
+	<name>ModelGlue_3_EventGeneration</name>
 	<comment></comment>
 	<projects>
 	</projects>
 	<buildSpec>
 	</buildSpec>
 	<natures>
+		<nature>org.cfeclipse.cfml.CFENature</nature>
 	</natures>
 </projectDescription>
