--- a/modelglueapplicationtemplate/build.properties
+++ b/modelglueapplicationtemplate/build.properties
@@ -6,7 +6,7 @@
 # you'd like your new ModelGlue application to go.  
 # This is normally your webroot.
 
-newApplicationDirectory = D:/temp/wwwroot/
+newApplicationDirectory = D:/webroot/PlantOMatic
 
 # Location of the Model-Glue Template files 
 # Don't change this unless you've moved the files!
